locationid api working!

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -29,6 +29,6 @@
   <coreButton type="submit" class="coreButton">Submit</coreButton>
 </form> -->
   
-<div id="signUpForm"></div>
+<div id="signInForm"></div>
 
   {% endblock %}
