--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     width: 100vw; /* 100% of the viewport width */
     height: 100vh; /* 100% of the viewport height */
-    background-image: url("static/img/background.jpg");
+    /* background-image: url("static/img/background.jpg"); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -62,8 +62,8 @@
     gap: 10px;
     justify-content: center;
     padding: 10px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 40px;
+        padding-right: 40px;
     position: relative;
     color: #000000;
     transition: 0.7s;
@@ -150,4 +150,11 @@
     top: 0;
     left: 0;
     background-color: #739e8233;
+}
+
+/* ACCORDIAN */
+.accordian {
+    width:100%;
+    margin-left: 40px;
+    margin-right: 40px;
 }
