--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,8 @@
   <!-- react, reactdom and react bootstrap -->
   <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-  <script
-  src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
+ 
   <!-- my app.js -->
   <script type="module" src="./static/js/App.js"></script>
  
@@ -38,14 +36,12 @@
 </head>
 
 <body>
-  <div id="root"></div>
-
-
-
 
   <!-- start custom navbar -->
-  <div id="navigation"></div>
+  <div id="topnav" ></div>
   <!-- end custom navbar -->
+
+
   <div class="main-body">
     {% block body %}
 
