--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock %}
+{% block title %}Welcome to OMW{% endblock %}
 
 {% block head %}
   <!-- Bootstrap CSS -->
