profile page rendered

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,8 @@
       
     {% endif %}
 
-  <!-- start custom navbar -->
+  <!-- NAV -->
   <div id="topnav" ></div>
-  <!-- end custom navbar -->
 
 
   <div class="main-body">
