add a trip working

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,9 +12,12 @@
       {% block body %}
         <h1> My Profile</h1>
         
-    
-
         <div id = "userProfile"></div>
+
+        <div id="createTrip"></div>
+
+
+
       {% endblock %}
 
 
