--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Link to your CSS file -->
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="/static/css/style.css">
 
   <!-- bootstrap css -->
   <link
@@ -14,8 +14,8 @@
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
   crossorigin="anonymous"
 />
-   <!-- Your bundled JavaScript file -->
 
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
   <!-- react, reactdom and react bootstrap -->
   <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
@@ -23,7 +23,7 @@
   <script src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
  
   <!-- my app.js -->
-  <script type="module" src="./static/js/App.js"></script>
+  <script type="module" src="/static/js/App.js"></script>
  
 
 
