--- a/templates/excursion-results.html
+++ b/templates/excursion-results.html
@@ -3,7 +3,7 @@
 
 {% block head %}
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"> -->
     
   
 {% endblock %}
