--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,16 +9,13 @@
 {% endblock %}
       <!-- end custom navbar -->
 
-      {% block body %}
-      <div class="image-container">
-        <img class="vector" src="static/img/coverimage.png" alt="Vector Image" />
-        <img class="wave" src="static/img/wave.png"/>
-      </div>
-      <!-- new div for content that will have margins -->
-        <div class="content-container">
-          <coreButton id="planning" class="coreButton" >Start Planning</coreButton>
+      <!-- <div id="banner"></div> -->
 
-        </div>
+      {% block body %}
+
+      <div id="banner"></div>
+
+
         
 
       
