--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -12,23 +12,8 @@
 {% endblock %}
 
 {% block body %}
-<!-- <body class="d-flex align-items-center justify-content-center" style="min-height: 100vh;"> -->
- 
-<!-- <form id = "signInForm" class = "signInForm">
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
 
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="email" class="form-text">We'll never share your email with anyone else.</div>
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-
-  <coreButton type="submit" class="coreButton">Submit</coreButton>
-</form> -->
-  
-<div id="signUpForm"></div>
-
+<div class="formLogin">
+  <div id="signUpForm"></div>
+</div>
   {% endblock %}
