--- a/templates/excursion-results.html
+++ b/templates/excursion-results.html
@@ -7,7 +7,9 @@
     
   
 {% endblock %}
-
+{% block outofmainbody %}
+<!-- Your content outside of main-body goes here -->
+{% endblock %}
 {% block body %}
 
 <div id="locationid" ></div>
