added readme photos

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -358,7 +358,10 @@
 .trip_id {
     width:100%;
 }
-  
+
+#trip_id {
+    width:100%;
+}
 
 
 /* --- PROFILE PAGE---------------------------------------------------------- */
