--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,14 @@
   <!-- my app.js -->
   <script type="module" src="/static/js/App.js"></script>
  
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
 
+<title>
+  {% block title %}
 
-  <title>
-    {% block title %}
-
-    {% endblock %}
-  </title>
+  {% endblock %}
+</title>
 
 </head>
 
